<resources>
    <string name="app_name">Central POS</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_guest_order">Guest Order</string>
    <string name="title_fragment_detail">Detail</string>
    <string name="hello_blank_fragment">blank fragment</string>
    <string name="title_activity_waiter_home">Home</string>
    <string name="title_fragment_signup">Sign Up</string>
    <string name="title_activity_waiting">Waiting List</string>
    <string name="title_fragment_add">Add</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="title_fragment_feedback">Feedback</string>
    <string name="title_fragment_counter">Counter</string>
    <string name="title_activity_waiter_order_detail">Home</string>
    <string name="title_fragment_all_orders">Orders</string>
    <string name="title_fragment_order_detail">Order Detail</string>
    <string name="title_fragment_all_tables">Tables</string>
    <string name="title_fragment_category_item">Menu</string>
    <string name="title_fragment_cart_item">Order Information</string>
    <string name="title_fragment_offer">Offers</string>
    <string name="title_fragment_order_summary">Order Summary</string>
    <string name="title_fragment_guest_options">Guest Option</string>
    <string name="title_fragment_waiter_options">Waiter Option</string>
    <string name="title_fragment_offer_detail">Offer Detail</string>
    <string name="title_fragment_about_us">About Us</string>
    <string name="title_fragment_policy">Privacy Policy</string>
    <string name="title_fragment_terms_service">Terms Of Service</string>
    <string name="title_fragment_myaccount">Your Account</string>
    <string name="title_fragment_myprofile">Your Profile</string>
    <string name="title_fragment_notification_settings">Notification Settings</string>
    <string name="title_fragment_change_password">Change Password</string>
    <string name="title_fragment_table_order">Generate Bill</string>
    <string name="title_fragment_bottom_dialog">Select Order Type</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="MsgLoading">Loading…</string>
    <string name="MsgValidation">Please correct the errors</string>
    <string name="MsgNoRecord">No record found.</string>
    <string name="MsgAlreadyExist">Record already exist</string>
    <string name="MsgInsertFail">Failed to insert record</string>
    <string name="MsgInsertSuccess">Record inserted successfully</string>
    <string name="MsgDeleteFail">Failed to delete record</string>
    <string name="MsgDeleteSuccess">Record deleted successfully</string>
    <string name="MsgUpdateFail">Failed to update record</string>
    <string name="MsgUpdateSuccess">Record updated successfully</string>
    <string name="MsgSelectFail">Failed to select record</string>
    <string name="MsgCheckConnection">Please check internet connection</string>
    <string name="MsgConfirmDelete">Delete Record?</string>
    <string name="MsgConfirmLogout">Are you sure to Logout?</string>
    <string name="MsgConfirmSettings">Push notification off?</string>
    <string name="MsgServerNotResponding">Connection establishment failed, Try again</string>
    <string name="MsgFeedback">Thank you for your feedback, your response will help us to improve the quality of service.</string>
    <string name="MsgVerification">Your Phone Number is Verified.</string>
    <string name="MsgCart">Cart is empty.</string>
    <string name="MsgCartItem">%s is added to dish</string>
    <string name="MsgCartWithNoName">Item is added to dish</string>
    <string name="MsgWishListItem">%s is added to Wishlist.</string>
    <string name="MsgConfirmOrder">Items are place into order</string>
    <string name="MsgAddPerson">Person is added successfully</string>
    <string name="MsgUpdateProfile">Profile updated successfully</string>
    <string name="MsgUpdatePassword">Password changed successfully</string>
    <string name="MsgOffer">Currently no offers available.</string>
    <string name="MsgGallery">No Images Yet.</string>
    <string name="MsgItem">There is no item.</string>
    <string name="MsgChangeMode">Switch to waiter mode?</string>
    <string name="MsgDineOnly">Available for Dine-In only</string>
    <string name="MsgNoRecordFound">There is no %s</string>
    <string name="MsgCallWaiter">Waiter called.</string>
    <string name="MsgEmailAlreadyExist">Email already exist.</string>
    <string name="MsgBillGenerateSuccess">Bill printed successfully</string>
    <string name="splash_screen">arraybitlogo</string>
    <string name="ghVeg">Veg</string>
    <string name="ghNonVeg">Non Veg</string>
    <string name="ghJain">Jain</string>
    <string name="siUserName">User Name</string>
    <string name="siPassword">Password</string>
    <string name="siSignIn">Login</string>
    <string name="siNewUser">New User?</string>
    <string name="siSignupHere">Sign Up</string>
    <string name="siLoginFailedMsg">Username or Password are invalid.</string>
    <string name="siLoginSucessMsg">Login successfully.</string>
    <string name="clear_text">Clear Text</string>
    <string name="suAgree">By Signing up you will agree</string>
    <string name="suPrivacyPolicy">Privacy Policy</string>
    <string name="suAnd">and</string>
    <string name="suTerms">Terms of Service</string>
    <string name="suSignUp">Sign Up</string>
    <string name="suSignIn">Sign In</string>
    <string name="suAlreadyRegistered">Already Registered?</string>
    <string name="suFirstName">First Name</string>
    <string name="suValidEmail">Valid Email</string>
    <string name="suLastName">Last Name</string>
    <string name="suEmail">Email</string>
    <string name="suPhone">Mobile</string>
    <string name="suPassword">Password</string>
    <string name="suMale">Male</string>
    <string name="suFemale">Female</string>
    <string name="suGender">Gender</string>
    <string name="suBirthDate">Birth Date</string>
    <string name="suUpdate">Update Profile</string>
    <string name="navLogin">Login</string>
    <string name="navHome">Home</string>
    <string name="navProfile">Company Profile</string>
    <string name="navRegistration">Registration</string>
    <string name="navChangeMode">Change Mode</string>
    <string name="navSearch">Search</string>
    <string name="navChangeCounter">Change Counter</string>
    <string name="navOffers">Offers</string>
    <string name="navFeedback">Feedback</string>
    <string name="navAboutUs">About Us</string>
    <string name="navExit">Exit</string>
    <string name="navRate">Rate this App</string>
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="navShortList">Short List</string>
    <string name="navCallWaiter">Call Waiter</string>
    <string name="navNotification">Notification</string>
    <string name="fdFeedback">Feedback</string>
    <string name="fdPost">Post</string>
    <string name="fdCancel">Cancel</string>
    <string name="wmMyAccount">My Account</string>
    <string name="wmLogout">Logout</string>
    <string name="wmViewChange">View Change</string>
    <string name="wmCart">Cart</string>
    <string name="ldLogin">Login</string>
    <string name="ldCancel">Cancel</string>
    <string name="ldSkip">Skip</string>
    <string name="rTimings">Timings</string>
    <string name="rTo">To</string>
    <string name="sdSignup">Sign Up</string>
    <string name="sdCancel">Cancel</string>
    <string name="olOption">Options</string>
    <string name="odaOfferHighLight">Highlights</string>
    <string name="odaOfferCondition">Terms and condition</string>
    <string name="odaValidOn">Valid on %s</string>
    <string name="odaValidFor">Valid for %s</string>
    <string name="odaOfferFor">Offer for %s</string>
    <string name="odaOfferDiscountWithRupee">\u20B9 %s OFF</string>
    <string name="odaOfferDiscount">%s\uff05 OFF</string>
    <string name="odaMinAmt">Minimum Bill Amount \u20B9 %s</string>
    <string name="odaOfferValid">online and app</string>
    <string name="odaOfferValidOnline">online only</string>
    <string name="odaOfferValidApp">app only</string>
    <string name="odaOfferOnlyFor">Only for %s</string>
    <string name="odaDiamond">\u25C6</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
    <string name="title_activity_facebook_login">FacebookLoginActivity</string>
    <string name="afName">Name</string>
    <string name="afMobileNo">Mobile</string>
    <string name="afPerson">Persons</string>
    <string name="afSubmit">Submit</string>
    <string name="hfProfile">Profile</string>
    <string name="fbName">Name</string>
    <string name="fbEmail">Email</string>
    <string name="fbMobileNo">Mobile</string>
    <string name="fbFeedback">Feedback</string>
    <string name="fbSubmit">Submit</string>
    <string name="fbOther">Other Query</string>
    <string name="fbBug">Bug Report</string>
    <string name="fbSuggestion">Suggestion</string>
    <string name="fbFeedbackGroup">Give Suggestion</string>
    <string name="sfName">Server Name</string>
    <string name="sfSubmit">Submit</string>
    <string name="dfApp">About This</string>
    <string name="dfAdd">Add</string>
    <string name="dfCancel">Cancel</string>
    <string name="dfPlus">+</string>
    <string name="dfMinus">-</string>
    <string name="dfRupee">\u20B9</string>
    <string name="dfItemSuggestion">Item Suggestion</string>
    <string name="wsdTitle">Change Status</string>
    <string name="wsdServe">Assign</string>
    <string name="wsdNot">N/A</string>
    <string name="wsdCancel">Cancel</string>
    <string name="wsdWaiting">Waiting</string>
    <string name="wsdCall">Call</string>
    <string-array name="spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pfUpdate">Update Profile</string>
    <string name="wlfNo">No</string>
    <string name="wlfName">Name</string>
    <string name="wlfMobile">Mobile</string>
    <string name="wlfPerson">Persons</string>
    <string name="tsAll">All</string>
    <string name="tsVacant">Vacant</string>
    <string name="tsBusy">Occupied</string>
    <string name="tsOccupy">Occupy</string>
    <string name="tsBlock">Block</string>
    <string name="tsBlocked">Blocked</string>
    <string name="tsDirty">Dirty</string>
    <string name="odfNo">No</string>
    <string name="odfName">Name</string>
    <string name="odfPrice">Price</string>
    <string name="odfQty">Qty</string>
    <string name="odfAddMore">Add More</string>
    <string name="odfCheckOut">Check Out</string>
    <string name="aiqfRemark">Remark</string>
    <string name="aiqfModifier">Modifier</string>
    <string name="aiqfCancel">Cancel</string>
    <string name="aiqfOk">Done</string>
    <string name="aiqfTitle">Add Quantity</string>
    <string name="roTotalItem">Total Item</string>
    <string name="wolfOrder">Orders</string>
    <string name="wolfTable">Dine In</string>
    <string name="wolfMenu">Take Away</string>
    <string name="wolfOffer">Offers</string>
    <string name="wolfGenerate">Generate Bill</string>
    <string name="golfOrder">Orders</string>
    <string name="golfFeedback">Feedback</string>
    <string name="golfMenu">Menu</string>
    <string name="golfOffer">Offers</string>
    <string name="cifQty">Qty</string>
    <string name="cifItem">Item</string>
    <string name="cifAmount">Amount</string>
    <string name="cifRate">Rate</string>
    <string name="cmfWaiterMode">Waiting Mode</string>
    <string name="cmfGuestMode">Guest Mode</string>
    <string name="cmfCancel">Cancel</string>
    <string name="cmfSubmit">Submit</string>
</resources>