<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<group android:checkableBehavior="single">-->

    <item
        android:id="@+id/home"
        android:icon="@mipmap/home"
        android:title="@string/navHome" />

    <item
        android:id="@+id/wOffers"
        android:icon="@mipmap/offers"
        android:title="@string/navOffers" />

    <item
        android:id="@+id/wFeedback"
        android:icon="@mipmap/feedback"
        android:title="@string/navFeedback" />

    <item
        android:id="@+id/wChangeMode"
        android:icon="@mipmap/change_mode"
        android:title="@string/navChangeMode" />
    <item
        android:id="@+id/wChangeCounter"
        android:icon="@mipmap/food"
        android:title="@string/navChangeCounter" />

    <item
        android:id="@+id/wRate"
        android:icon="@mipmap/rating"
        android:title="@string/navRate" />

    <item
        android:id="@+id/wAbout"
        android:icon="@mipmap/aboutus"
        android:title="@string/navAboutUs" />

    <item
        android:id="@+id/wExit"
        android:icon="@mipmap/exit"
        android:title="@string/navExit" />
</menu>