<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:icon="@mipmap/profile"
        android:title="@string/navProfile" />

    <item
        android:id="@+id/offers"
        android:icon="@mipmap/offers"
        android:title="@string/navOffers" />

    <item
        android:id="@+id/changeMode"
        android:icon="@mipmap/change_mode"
        android:title="@string/navChangeMode" />

    <item
        android:id="@+id/rate"
        android:icon="@mipmap/rating"
        android:title="@string/navRate" />

    <item
        android:id="@+id/feedback"
        android:icon="@mipmap/feedback"
        android:title="@string/navFeedback" />

    <item
        android:id="@+id/aboutus"
        android:icon="@mipmap/aboutus"
        android:title="@string/navAboutUs" />

</menu>


