<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dialog_vertical_margin"
    android:paddingEnd="@dimen/dialog_horizontal_margin"
    android:paddingStart="@dimen/dialog_horizontal_margin"
    android:paddingTop="@dimen/dialog_vertical_margin"
    tools:context="com.arraybit.pos.GuestRegistrationDialogFragment">

    <com.rey.material.widget.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/control_SpecingMedium"
        android:paddingTop="@dimen/control_SpecingMedium"
        android:text="@string/title_fragment_signup"
        android:textColor="@android:color/black"
        android:textSize="@dimen/control_TextMedium"
        android:textStyle="bold" />


    <com.rey.material.widget.EditText
        android:id="@+id/etFirstName"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suFirstName"
        android:inputType="textPersonName" />

    <com.rey.material.widget.EditText
        android:id="@+id/etLastName"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suLastName"
        android:inputType="textPersonName" />


    <com.rey.material.widget.EditText
        android:id="@+id/etEmail"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suEmail"
        android:inputType="textWebEmailAddress" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.rey.material.widget.EditText
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suPassword"
            android:inputType="textWebPassword" />

    </RelativeLayout>

    <com.rey.material.widget.EditText
        android:id="@+id/etPhone"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suPhone"
        android:inputType="phone"
        android:maxLength="10" />


    <RadioGroup
        android:id="@+id/rgMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:text="@string/suMale" />

        <RadioButton
            android:id="@+id/rbFemale"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/control_SpecingMedium"
            android:gravity="center"
            android:text="@string/suFemale" />
    </RadioGroup>
</LinearLayout>
