<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/offwhite"
    tools:context="com.arraybit.pos.SignUpFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <com.rey.material.widget.EditText
                android:id="@+id/etFirstName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suFirstName"
                android:inputType="textPersonName" />

            <com.rey.material.widget.EditText
                android:id="@+id/etLastName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suLastName"
                android:inputType="textPersonName" />


            <com.rey.material.widget.EditText
                android:id="@+id/etEmail"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suEmail"
                android:inputType="textWebEmailAddress" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.rey.material.widget.EditText
                    android:id="@+id/etPassword"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suPassword"
                    android:inputType="textWebPassword" />

            </RelativeLayout>

            <com.rey.material.widget.EditText
                android:id="@+id/etPhone"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suPhone"
                android:inputType="phone"
                android:maxLength="10" />


            <RadioGroup
                android:id="@+id/rgMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/suMale" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/control_SpecingMedium"
                    android:gravity="center"
                    android:text="@string/suFemale" />
            </RadioGroup>

            <Spinner
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner"
                android:layout_marginTop="@dimen/control_SpecingSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/SecondaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suAgree" />

                <com.rey.material.widget.CompoundButton
                    android:id="@+id/cbPrivacyPolicy"
                    style="@style/CompoundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/control_SpecingSmall"
                    android:text="@string/suPrivacyPolicy" />

                <TextView
                    style="@style/SecondaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/control_SpecingSmall"
                    android:text="@string/suAnd" />
            </LinearLayout>

            <com.rey.material.widget.CompoundButton
                android:id="@+id/cbTermsofService"
                style="@style/CompoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suTerms"
                android:layout_gravity="center"/>

            <com.rey.material.widget.Button
                android:id="@+id/btnSignUp"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_SpecingSmall"
                android:text="@string/suSignUp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/SecondaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suAlreadyRegistered" />

                <com.rey.material.widget.CompoundButton
                    android:id="@+id/cbSignIn"
                    style="@style/CompoundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/control_SpecingSmall"
                    android:text="@string/suSignIn" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
