<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    android:orientation="vertical"
    tools:context="com.arraybit.pos.AddFragment">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <com.rey.material.widget.EditText
        android:id="@+id/etNameWait"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/afName"
        android:inputType="textCapWords|textCapSentences"
        android:paddingEnd="@dimen/control_SpecingSmall"
        android:paddingStart="@dimen/control_SpecingSmall"
        android:paddingTop="@dimen/control_SpecingSmall" />

    <com.rey.material.widget.EditText
        android:id="@+id/etMobileNo"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/afMobileNo"
        android:inputType="number"
        android:maxLength="10"
        android:paddingEnd="@dimen/control_SpecingSmall"
        android:paddingStart="@dimen/control_SpecingSmall" />

    <com.rey.material.widget.EditText
        android:id="@+id/etPersons"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/afPerson"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="2"
        android:paddingEnd="@dimen/control_SpecingSmall"
        android:paddingStart="@dimen/control_SpecingSmall" />

    <com.rey.material.widget.Button
        android:id="@+id/btnAdd"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_Height"
        android:layout_margin="@dimen/control_SpecingSmall"
        android:text="@string/afSubmit" />
</LinearLayout>
