<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ChangeModeDialogFragment"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/control_SpecingMedium"
        android:orientation="vertical">

        <com.rey.material.widget.EditText
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suPassword"
            android:inputType="textWebPassword"
            android:padding="@dimen/control_SpecingTiny" />

        <LinearLayout
            android:id="@+id/modeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.rey.material.widget.Button
                android:id="@+id/btnWaiterMode"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/control_SpecingTiny"
                android:layout_weight="1"
                android:text="@string/cmfWaiterMode" />

            <com.rey.material.widget.Button
                android:id="@+id/btnGuestMode"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/cmfGuestMode" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            tools:ignore="HardcodedText">

            <com.rey.material.widget.Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmfCancel" />

            <com.rey.material.widget.Button
                android:id="@+id/btnSubmit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmfSubmit" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
