<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id ="@+id/orderDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arraybit.pos.OrderDetailFragment">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/leftHeight"
        android:layout_marginTop="@dimen/control_SpecingTiny"
        android:background="@color/accent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/control_SpecingTiny">

        <com.rey.material.widget.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/odfNo"
            android:textColor="@android:color/black" />

        <com.rey.material.widget.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/odfName"
            android:textColor="@android:color/black" />

        <com.rey.material.widget.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/odfPrice"
            android:textColor="@android:color/black" />

        <com.rey.material.widget.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:text="@string/odfQty"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvOrderItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/control_SpecingSmall" />

</LinearLayout>
